--- a/main.css
+++ b/main.css
@@ -22,10 +22,10 @@ div {
   border-top-color: #00bc3f;
 }
 #indigo { /* this selects any elements with the red id */
-  border-top-color: ##8a2be2;
+  border-top-color: #8a2be2;
 }
 #blue { /* this selects any elements with the red id */
-  border-top-color: ##06f;
+  border-top-color: #06f;
 }
 #violet { /* this selects any elements with the red id */
   border-top-color: #d300c9;
